--- a/Week1-Introduction/4.Thursday/Warmup-DoFirst/pom.xml
+++ b/Week1-Introduction/4.Thursday/Warmup-DoFirst/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>WARMUP-OPTIONAL</artifactId>
+    <artifactId>Warmup-DoFirst</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
