--- a/Week11-REST/vehicle-workshop/src/main/resources/application.properties
+++ b/Week11-REST/vehicle-workshop/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=vehicle-workshop
 # MySQL Database Connection Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/vehicleworkshopdb
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Leeames123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
